llmserv/main/features/ffi/include/llmserv.h

/*
 * llmserv.h — C-ABI bindings for llmserv.
 *
 * Auto-generated by cbindgen from llmserv-ffi. Do not edit by hand.
 */

#ifndef LLMSERV_H
#define LLMSERV_H

#pragma once

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Error codes returned by every function. Zero is success.
 */
typedef enum LlmError {
  OK = 0,
  /**
   * A pointer argument was null or a string wasn't valid UTF-8.
   */
  INVALID_INPUT = 1,
  /**
   * Config load, model download, or weight load failed.
   */
  LOAD_FAILED = 2,
  /**
   * Tokenization or generation returned an error.
   */
  RUNTIME = 3,
  /**
   * A Rust panic was caught at the FFI boundary.
   */
  PANIC = 4,
  /**
   * Internal error (should not happen in normal operation).
   */
  INTERNAL = 5,
  /**
   * The handle was destroyed (via `llmserv_destroy`). Any call that
   * observes this should treat the handle as gone and not retry.
   */
  DESTROYED = 6,
} LlmError;

/**
 * Opaque session handle. Returned by `llmserv_init`, consumed by the
 * other functions, freed by `llmserv_destroy`.
 *
 * The actual layout is private and may change between versions. The
 * handle pointer remains valid for the lifetime of the process after
 * init — destroy releases the inner model but not the outer struct, so
 * any stray pointer use returns `Destroyed` rather than segfaulting.
 */
typedef struct LlmHandle LlmHandle;

/**
 * Load the model specified by `application.toml` (found via the
 * standard XDG search path). Writes an opaque handle to `*out_handle`
 * on success.
 *
 * # Safety
 * `out_handle` must point to writable memory holding a pointer.
 */
 int llmserv_init(struct LlmHandle **out_handle);

/**
 * Destroy a handle: drops the inner model, releasing weights and
 * activations. Idempotent — calling destroy twice is a safe no-op.
 * Safe to call concurrently with in-flight ops: waits for them to
 * finish, then transitions atomically. Subsequent calls on the handle
 * return `LlmError::Destroyed`.
 *
 * # Safety
 * `handle` must be a pointer returned by `llmserv_init`. Passing null
 * is a safe no-op. The handle pointer itself remains valid after this
 * call — only the inner model is released.
 */
 void llmserv_destroy(struct LlmHandle *handle);

/**
 * Run a single completion: prompt in, generated text out.
 *
 * Applies the model's chat template (wraps the prompt as a user message).
 * `max_tokens = 0` means use the model's default context length.
 * `temperature = 0.0` means greedy sampling.
 *
 * On success, writes a pointer to a NUL-terminated UTF-8 string to
 * `*out_text`. The caller must free it via `llmserv_free_string`.
 *
 * # Safety
 * `handle` is a valid handle from `llmserv_init`. `prompt` is a
 * NUL-terminated UTF-8 string. `out_text` points to writable memory.
 */

int llmserv_complete(const struct LlmHandle *handle,
                     const char *prompt,
                     uint32_t max_tokens,
                     float temperature,
                     char **out_text);

/**
 * Compute a mean-pooled embedding for the given input text. On success,
 * writes a pointer to an f32 array of length `*out_dim` to `*out_vec`.
 * The caller must free it via `llmserv_free_floats`.
 *
 * # Safety
 * See `llmserv_complete`.
 */

int llmserv_embed(const struct LlmHandle *handle,
                  const char *text,
                  float **out_vec,
                  uintptr_t *out_dim);

/**
 * Tokenize `text` and write the token ids to `*out_ids`, length in
 * `*out_len`. The caller must free via `llmserv_free_u32s`.
 *
 * # Safety
 * See `llmserv_complete`.
 */

int llmserv_tokenize(const struct LlmHandle *handle,
                     const char *text,
                     uint32_t **out_ids,
                     uintptr_t *out_len);

/**
 * Return just the token count for `text` (cheap — no allocation
 * returned to the caller). IDE plugins call this on every keystroke.
 *
 * # Safety
 * See `llmserv_complete`.
 */
 int llmserv_token_count(const struct LlmHandle *handle, const char *text, uintptr_t *out_count);

/**
 * Free a string returned by `llmserv_complete`. Passing null is a no-op.
 *
 * # Safety
 * `s` must be a pointer previously returned by `llmserv_complete`.
 */
 void llmserv_free_string(char *s);

/**
 * Free an f32 array returned by `llmserv_embed`. Passing null is a no-op.
 *
 * # Safety
 * `p` must be a pointer returned by `llmserv_embed` and `len` must be
 * the exact length written to `*out_dim` at that time.
 */
 void llmserv_free_floats(float *p, uintptr_t len);

/**
 * Free a u32 array returned by `llmserv_tokenize`. Passing null is a no-op.
 *
 * # Safety
 * `p` must be a pointer returned by `llmserv_tokenize` and `len` must
 * be the exact length written to `*out_len` at that time.
 */
 void llmserv_free_u32s(uint32_t *p, uintptr_t len);

#endif  /* LLMSERV_H */